# vm

./: .gitignore  Cargo.toml  Kconfig  LICENSE-MIT  Makefile  README.md  build-all.sh  flake.nix  run-all.sh  test-aarch64.sh  test-x86_64.sh
lib/: Makefile
lib/arch/aarch64/: Cargo.toml
lib/arch/aarch64/src/: common.rs  lib.rs
lib/arch/x86/: Cargo.toml
lib/arch/x86/src/: control.rs  cpuid.rs  io_port.rs  lib.rs  msr.rs
lib/arch/x86_32/: Cargo.toml
lib/arch/x86_32/src/: lib.rs
lib/arch/x86_64/: Cargo.toml
lib/arch/x86_64/src/: lib.rs  paging.rs
lib/arch/x86_common/: Cargo.toml
lib/arch/x86_common/src/: control.rs  control_register.rs  cpuid.rs  io_port.rs  lib.rs  msr.rs
lib/compiler-builtins/: Makefile  build.config
lib/compiler-builtins/src/: lib.rs
lib/core/: Makefile
lib/core/conversion/: Cargo.toml
lib/core/conversion/src/: lib.rs
lib/core/memory/: Cargo.toml
lib/core/memory/src/: address.rs  lib.rs  phys.rs  range.rs  translation.rs
lib/firmware/device_tree/: Cargo.toml
lib/firmware/device_tree/src/: lib.rs  raw.rs
lib/font/: Cargo.toml
lib/font/src/: font_map.rs  glyph.rs  lib.rs
lib/format/: Makefile
lib/format/elf/: Cargo.toml  Makefile  build.config
lib/format/elf/src/: dynamic.rs  encoding.rs  header.rs  ident.rs  lib.rs  medium.rs  program_header.rs  raw.rs  relocation.rs  section_header.rs  symbol.rs  table.rs
lib/format/pe/: Cargo.toml  Makefile  build.config
lib/format/pe/src/: lib.rs  raw.rs
lib/formats/elf/src/: encoding.rs  file_header.rs  ident.rs  lib.rs  program_header.rs  raw.rs  relocation.rs  section_header.rs  symbol.rs  table.rs
lib/misc/: Makefile
lib/misc/conversion/: Makefile  build.config
lib/platform/limine/: Cargo.toml
lib/platform/limine/src/: boot_time.rs  bootloader_info.rs  device_tree.rs  efi_mem_map.rs  efi_sys_table.rs  entry_point.rs  executable.rs  executable_addr.rs  executable_cmdline.rs  firmware_type.rs  framebuffer.rs  hhdm.rs  lib.rs  memory_map.rs  module.rs  paging_mode.rs  rsdp.rs  (+2 more)
lib/platform/linux/: Cargo.toml
lib/platform/uefi/: Cargo.toml
lib/stub_api/: Cargo.toml
lib/stub_api/src/: aarch64.rs  i686.rs  lib.rs  raw.rs  x86_32.rs  x86_64.rs
lib/sync/: Cargo.toml
lib/sync/src/: controlled_modification.rs  lib.rs  spinlock.rs
patches/: limine-enable-linux-entry-64.patch
revm/: Cargo.toml  Kconfig  Makefile  build.config  build.rs  linker-script.ld
revm/src/: log.rs  main.rs  stub_protocol.rs  util.rs
revm/src/acpi/: mod.rs
revm/src/allocator/: frame_allocator.rs  mod.rs
revm/src/arch/: arch_config.rs  capabilities.rs  mod.rs
revm/src/arch/aarch64/: capabilities.rs  mod.rs
revm/src/arch/aarch64/memory/: mod.rs
revm/src/arch/generic/: mod.rs
revm/src/arch/generic/memory/: mod.rs  phys.rs  virt.rs
revm/src/arch/i686/: mod.rs
revm/src/arch/i686/memory/: mod.rs
revm/src/arch/memory/: mod.rs
revm/src/arch/x86/: capabilities.rs  mod.rs
revm/src/arch/x86/memory/: mod.rs
revm/src/arch/x86_32/: mod.rs
revm/src/arch/x86_64/: mod.rs
revm/src/arch/x86_64/memory/: mod.rs
revm/src/arch/x86_64/paging/: mapper.rs  mod.rs
revm/src/arch/x86_64/virtualization/: mod.rs
revm/src/arch/x86_64/virtualization/vmx/: mod.rs
revm/src/arch/x86_common/: arch_config.rs  mod.rs
revm/src/arch/x86_common/paging/: long_mode.rs  mod.rs
revm/src/arch/x86_common/virtualization/: mod.rs
revm/src/arch/x86_common/virtualization/vmx/: mod.rs  raw.rs
revm/src/memory/: mod.rs  phys.rs  virt.rs
revm/src/memory/general/: mod.rs  page.rs  slab.rs
revm/src/memory/phys/: managed_region.rs  mod.rs  structs.rs
revm/src/memory/virt/: mod.rs  structs.rs
revm/src/stub_protocol/: log.rs  mod.rs
stub/: Cargo.toml  Kconfig  Makefile  build.config  build.rs  linker-script.ld
stub/src/: blob.rs  initgraph.rs  main.rs  util.rs
stub/src/arch/: mod.rs
stub/src/arch/aarch64/: mod.rs  paging.rs  relocation.rs
stub/src/arch/aarch64/memory/: mod.rs
stub/src/arch/aarch64/memory/paging/: mod.rs  vmsa_v8.rs
stub/src/arch/aarch64/switch/: code.rs  mod.rs
stub/src/arch/generic/: address_space.rs  mod.rs  switch.rs
stub/src/arch/generic/memory/: mod.rs  paging.rs
stub/src/arch/generic/switch/: func.rs  function.rs  mod.rs  setup.rs
stub/src/arch/x86/: mod.rs  relocation.rs
stub/src/arch/x86/memory/: mod.rs
stub/src/arch/x86/memory/paging/: bits_32.rs  long_mode.rs  mod.rs  pae.rs
stub/src/arch/x86/switch/: i686.rs  mod.rs  x86_64.rs
stub/src/arch/x86_64/: address_space.rs  mod.rs  switch.rs
stub/src/arch/x86_common/: mod.rs  paging.rs  relocation.rs
stub/src/arch/x86_common/paging/: bits_32.rs  long_mode.rs  mod.rs  pae.rs
stub/src/arch/x86_common/switch/: mod.rs  x86_32.rs  x86_64.rs
stub/src/boot/: context.rs  limine.rs  mod.rs  uefi.rs
stub/src/boot/linux/: mod.rs  x86.rs
stub/src/executable/: blob.rs  elf.rs  layout.rs  mapping.rs  mod.rs  relocation.rs
stub/src/graphics/: console.rs  mod.rs  surface.rs
stub/src/platform/: allocator.rs  frame_allocator.rs  heap_allocator.rs  limine.rs  memory_structs.rs  mod.rs  relocate.rs  relocation.rs  uefi.rs
stub/src/platform/generic/: allocation.rs  frame_allocation.rs  logging.rs  mod.rs  platform_tables.rs  processor.rs
stub/src/platform/generic/memory/: alloc.rs  mem_structs.rs  mod.rs  phys.rs  virt.rs
stub/src/platform/graphics/: console.rs  mod.rs  surface.rs
stub/src/platform/limine/: graphics.rs  mod.rs
stub/src/platform/linux/: i686.rs  mod.rs  x86_64.rs
stub/src/platform/linux/aarch64/: mod.rs
stub/src/platform/linux/x86_64/: mod.rs  virt.rs
stub/src/platform/shared/: linux.rs  mod.rs  uefi.rs
target-specifications/: aarch64-unknown-none.json
targets/: aarch64.json  x86_32-unknown-none.json  x86_64-unknown-none.json
tools/: Makefile
tools/font-converter/: Cargo.toml
tools/font-converter/src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: common.rs  main.rs
xtask/src/action/: build_revm.rs  build_stub.rs  clippy.rs  doc.rs  mod.rs  package.rs  run.rs
xtask/src/cli/: build_revm.rs  build_stub.rs  clippy.rs  doc.rs  mod.rs  package.rs  run.rs
(+50 files in other folders)
