[workspace]
resolver = "3"
members = [
    "lib/arch/x86_32",
    "lib/arch/x86_64",
    "lib/arch/x86_common",

    "lib/format/elf",
    "lib/format/pe",

    "lib/platform/limine",
    "lib/platform/uefi",

    "lib/font",
    "lib/stub_api",
    "lib/sync",

    "revm",
    "stub",

    "xtask",
]

[workspace.package]
authors = [ "Jarl Evanson <evanson.jarl@gmail.com>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JarlEvanson/revm.git"

[workspace.dependencies]
x86_32 = { path = "lib/arch/x86_32" }
x86_64 = { path = "lib/arch/x86_64" }
x86_common = { path = "lib/arch/x86_common" }

elf = { path = "lib/format/elf" }
pe = { path = "lib/format/pe" }

limine = { path = "lib/platform/limine" }
uefi = { path = "lib/platform/uefi" }

font = { path = "lib/font" }
stub_api = { path = "lib/stub_api" }
sync = { path = "lib/sync" }

anyhow = "1.0"
clap = "4.5"

[workspace.lints.rust]
# Safety lints
unsafe_op_in_unsafe_fn = "deny"

# Documentation lints
missing_docs = "warn"

[workspace.lints.clippy]
# Safety lints
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Documentation lints
missing_safety_doc = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_docs_in_private_items = "warn"

# Pedantic lints
as_conversions = "warn"

[profile.release]
overflow-checks = true
