[workspace]
resolver = "3"
members = [
    # --- Core Abstractions ---
    # Low-level primitives that are used across many crates in this project.
    "lib/core/conversion",
    "lib/core/memory",

    # --- Architecture Support ---
    # Architecture dependent definitions and logic.
    "lib/arch/aarch64",
    "lib/arch/x86",

    # --- File Formats ---
    # Parsers and writers for binary file formats.
    "lib/format/elf",
    "lib/format/pe",

    # --- Utilities ---
    # General-purpose internal helper libraries.
    "lib/stub_api",
    "lib/sync",
    
    # --- Application Binaries ---
    # The crates that define the application binaries that the remainder of
    # the workspace is used to support.
    "revm",
    "stub",

    # --- Tools ---
    # Helper utilities for development and packaging workflows.
    "xtask",
]

[workspace.package]
authors = [ "Jarl Evanson <evanson.jarl@gmail.com>" ]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JarlEvanson/revm.git"

[workspace.dependencies]
# --- Internal Dependencies ---
# Core Abstractions
conversion = { path = "lib/core/conversion" }
memory = { path = "lib/core/memory" }

# Architecture Support
aarch64 = { path = "lib/arch/aarch64" }
x86 = { path = "lib/arch/x86" }

# File Formats
elf = { path = "lib/format/elf" }
pe = { path = "lib/format/pe" }

# Utilities
stub_api = { path = "lib/stub_api" }
sync = { path = "lib/sync" }

# --- External Dependencies ---
anyhow = "1.0"
clap = { version = "4.5", features = [ "env" ] }

[workspace.lints.rust]
# Safety lints
unsafe_op_in_unsafe_fn = "deny"

# Documentation lints
missing_docs = "warn"

[workspace.lints.clippy]
# Safety lints
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Documentation lints
missing_safety_doc = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_docs_in_private_items = "warn"

# Pedantic lints
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
ptr_as_ptr = "warn"

[profile.release]
overflow-checks = true
