[package]
name = "revm"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stub_api.workspace = true
sync.workspace = true

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86_32.workspace = true
x86_64.workspace = true
x86_common.workspace = true

[lints]
workspace = true
