[package]
name = "revm-stub"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
elf.workspace = true

limine.workspace = true
uefi.workspace = true

stub_api.workspace = true
sync.workspace = true

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
x86_32.workspace = true
x86_64.workspace = true
x86_common.workspace = true

[lints]
workspace = true
