[package]
name = "revm-stub"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
font-converter.workspace = true

[dependencies]
conversion.workspace = true
memory.workspace = true

elf.workspace = true

uefi.workspace = true

font.workspace = true
stub_api.workspace = true
sync.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64.workspace = true

limine.workspace = true

[target.'cfg(target_arch = "x86")'.dependencies]
x86.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86.workspace = true

limine.workspace = true

[lints]
workspace = true
