[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
conversion.workspace = true

elf.workspace = true
pe.workspace = true

anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true
